--- a/recipes/chilichicken.html
+++ b/recipes/chilichicken.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sourdough</title>
+    <title>Chili Chicken</title>
 </head>
 <body>
-    <h1>Sourdough</h1>
+    <h1>Chili Chicken</h1>
+    <img src="../img/chilidrumsticks.jpg" alt="Cooked chicken drumsticks">
 </body>
 </html>
