added ingredients, instruction text to 'recipes'

--- a/recipes/chilichicken.html
+++ b/recipes/chilichicken.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chili Chicken</title>
 </head>
+
 <body>
     <h1>Chili Chicken</h1>
     <img src="../img/chilidrumsticks.jpg" alt="Cooked chicken drumsticks">
+    <p>
+    <h2>Ingredients</h2>
+    <ul>
+        <b>
+            <li>2lb chicken drumsticks</li>
+            <li>1 bunch cilantro <em>(rinsed and loose chopped)</em></li>
+            <li>4 fresh thai chilies <em>(finely sliced)</em></li>
+            <li>100g salted butter <em>(melted)</em></li>
+            <li>4 cloves garlic <em>(coarsely chopped)</em></li>
+            <li>1tbsb chili powder</li>
+        </b>
+    </ul>
+    </p>
+    <p>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Combine <b>chicken</b>, <b>butter</b>, and <b>chili powder</b> in a large bowl. Toss until chicken is
+            thoroughly coated</li>
+        <li>Place seasoned drumsticks on baking tray and place in oven at 420f</li>
+        <li>After 20 min, take out of oven and toss in <em>garlic</em> and <em>sliced chilies</em>, return to oven on tray</li>
+        <li>Bake for 30 minutes at 420f, and then 10m minutes at 450f</li>
+        <li>Remove from oven, let cool for 10 minutes, add cilantro as garnish</li>
+    </ol>
+    </p>
 </body>
+
 </html>
