--- a/recipes/onsenegg.html
+++ b/recipes/onsenegg.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onsen Egg</title>
 </head>
+
 <body>
     <h1>Onsen Egg</h1>
     <img src="../img/onsen.jpg" alt="Poached soy egg">
+    <p>
+    <h2>Ingredients</h2>
+    <ul>
+        <b>
+            <li>4 cups water</li>
+            <li>6 large eggs</li>
+            <li>1cup soya sauce</li>
+            <li>1cup (cold) water</li>
+        </b>
+    </ul>
+    </p>
+    <p>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Bring <b>water</b> to boil in a covered pot.</li>
+        <li>Remove pot from heat, add <b>cold water</b>, and place <b>eggs</b> in pot slowly. Cover.</li>
+        <li>Remove eggs from pot after 17 minutes.</li>
+        <li>Place eggs in soya sauce and 1 cup water, store covered for 1 day, <em>(up to 5 days)</em> before consuming.</li>
+    </ol>
+    </p>
 </body>
+
 </html>
