--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sourdough</title>
 </head>
+
 <body>
     <h1>Sourdough</h1>
     <img src="../img/sourdough.jpg" alt="sourdough loaf">
+    <p>
+    <h2>Ingredients</h2>
+    <ul>
+        <b>
+            <li>250g water</li>
+            <li>150g sourdough starter</li>
+            <li>25g olive oil</li>
+            <li>500g bread flour</li>
+            <li>10g fine sea salt</li>
+        </b>
+    </ul>
+    </p>
+    <p>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Whisk <b>water</b>, <b>sourdough starter</b> and <b>olive oil</b> together in a large bowl.</li>
+        <li>Combine <b>flour</b> and <b>salt</b>, kneading by hand until dough is evenly combined.
+        <li>Cover with plastic wrap or damp cloth, let sit or 'autolyse' for 30 minutes. After dough has rested, work
+            into a ball directly in the bowl. </li>
+        <li>Let rise at room temperature (between 3-12 hours until double in size) </li>
+        <li>Fold dough into a boule shape, let rise for 1 hour covered on tray</li>
+        <li>Place in oven preheated to 400f, cook 20 min covered, then 40 min open until deep golden brown</li>
+        <li>Cool on wire rackk 1 hour</li>
+    </ol>
+    </p>
 </body>
+
 </html>
