fix broken links on index, fix em/b tags

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/chilichicken.html"></a>Chili Chicken</p>
-    <p><a href="recipes/onsenegg.html"></a>Onsen Egg</p>
-    <p><a href="recipes/sourdough.html"></a>Sourdough</p>
+    <p><a href="recipes/chilichicken.html">Chili Chicken</a></p>
+    <p><a href="recipes/onsenegg.html">Onsen Egg</a></p>
+    <p><a href="recipes/sourdough.html">Sourdough</a></p>
 </body>
+
 </html>
