--- a/recipes/chilichicken.html
+++ b/recipes/chilichicken.html
@@ -30,7 +30,7 @@
         <li>Combine <b>chicken</b>, <b>butter</b>, and <b>chili powder</b> in a large bowl. Toss until chicken is
             thoroughly coated</li>
         <li>Place seasoned drumsticks on baking tray and place in oven at 420f</li>
-        <li>After 20 min, take out of oven and toss in <em>garlic</em> and <em>sliced chilies</em>, return to oven on tray</li>
+        <li>After 20 min, take out of oven and toss in <b>garlic</b> and <b>sliced chilies</b>, return to oven on tray</li>
         <li>Bake for 30 minutes at 420f, and then 10m minutes at 450f</li>
         <li>Remove from oven, let cool for 10 minutes, add cilantro as garnish</li>
     </ol>
