minor grammar fixes

--- a/recipes/chilichicken.html
+++ b/recipes/chilichicken.html
@@ -20,7 +20,7 @@
             <li>4 fresh thai chilies <em>(finely sliced)</em></li>
             <li>100g salted butter <em>(melted)</em></li>
             <li>4 cloves garlic <em>(coarsely chopped)</em></li>
-            <li>1tbsb chili powder</li>
+            <li>1tbsp chili powder</li>
         </b>
     </ul>
     </p>
