--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -33,7 +33,7 @@
         <li>Let rise at room temperature (between 3-12 hours until double in size) </li>
         <li>Fold dough into a boule shape, let rise for 1 hour covered on tray</li>
         <li>Place in oven preheated to 400f, cook 20 min covered, then 40 min open until deep golden brown</li>
-        <li>Cool on wire rackk 1 hour</li>
+        <li>Cool on wire rack 1 hour</li>
     </ol>
     </p>
 </body>
